# bia6304-assignment4

./: .gitignore  README.md  main.ipynb  pyproject.toml
assignment/: assignment4.py  config.py
assignment/data/: __init__.py  io.py  lda.py  sampling.py
