[tool.poetry]
name = "bia6304-assignment4"
version = "0.1.0"
description = "LDA Topic Modeling With the Wikipedia Summary Dataset"
authors = ["Martin Bukowski <martin.bukowski@rockhurst.edu>"]
readme = "README.md"
packages = [{include = "assignment"}]

[tool.poetry.dependencies]
dask = "^2024.8.0"
python = ">=3.9,<4"
pandas = "2.*"
numpy = ">=1.26.4,<2"
gensim = "^4.3.3"
networkx = "^3.2.1"
jupyter = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-v --cov=assignment --cov-report=term-missing -W ignore::DeprecationWarning"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.coverage.run]
source = ["assignment"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "pass",
    "except ImportError:",
]

[tool.black]
line-length = 100
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true